lab5/samples/yacc/list/v0/y.output
Grammar

    0 $accept: __list $end

    1 __list: _list '\n'

    2 _list: %empty
    3      | list

    4 list: NUM
    5     | NUM ',' list


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    ',' (44) 5
    error (256)
    NUM (258) 4 5


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    __list (7)
        on left: 1
        on right: 0
    _list (8)
        on left: 2 3
        on right: 1
    list (9)
        on left: 4 5
        on right: 3 5


State 0

    0 $accept: . __list $end

    NUM  shift, and go to state 1

    $default  reduce using rule 2 (_list)

    __list  go to state 2
    _list   go to state 3
    list    go to state 4


State 1

    4 list: NUM .
    5     | NUM . ',' list

    ','  shift, and go to state 5

    $default  reduce using rule 4 (list)


State 2

    0 $accept: __list . $end

    $end  shift, and go to state 6


State 3

    1 __list: _list . '\n'

    '\n'  shift, and go to state 7


State 4

    3 _list: list .

    $default  reduce using rule 3 (_list)


State 5

    5 list: NUM ',' . list

    NUM  shift, and go to state 1

    list  go to state 8


State 6

    0 $accept: __list $end .

    $default  accept


State 7

    1 __list: _list '\n' .

    $default  reduce using rule 1 (__list)


State 8

    5 list: NUM ',' list .

    $default  reduce using rule 5 (list)
